// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI PageHeader and BreadcrumbTrail/> does not condense Breadcrumb, if context is too wide 1`] = `
<ol
  className="xui-breadcrumbtrail"
>
  <li
    className="xui-breadcrumb"
  >
    <a
      className="xui-breadcrumb--link"
      href="#1"
    >
      Settings
    </a>
  </li>
  <li
    className="xui-breadcrumb-arrow"
  >
    <div
      className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
    >
      <svg
        className="xui-icon xui-icon-rotate-270"
        focusable="false"
        height={4}
        viewBox="0 0 7 4"
        width={7}
      >
        <path
          d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
          role="presentation"
        />
      </svg>
    </div>
  </li>
  <li
    className="xui-breadcrumb"
  >
    <a
      className="xui-breadcrumb--link"
      href="#2"
    >
      Edit
    </a>
  </li>
  <li
    className="xui-breadcrumb-arrow"
  >
    <div
      className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
    >
      <svg
        className="xui-icon xui-icon-rotate-270"
        focusable="false"
        height={4}
        viewBox="0 0 7 4"
        width={7}
      >
        <path
          d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
          role="presentation"
        />
      </svg>
    </div>
  </li>
  <li
    className="xui-breadcrumb"
  >
    <a
      className="xui-breadcrumb--link"
      href="#3"
    >
      Invite
    </a>
  </li>
</ol>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> does not condense XUIBreadcrumbTrail, if breadcrumb length < 3 1`] = `
<ol
  className="xui-breadcrumbtrail"
>
  <li
    className="xui-breadcrumb"
  >
    <a
      className="xui-breadcrumb--link"
      href="#1"
    >
      Settings
    </a>
  </li>
  <li
    className="xui-breadcrumb-arrow"
  >
    <div
      className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
    >
      <svg
        className="xui-icon xui-icon-rotate-270"
        focusable="false"
        height={4}
        viewBox="0 0 7 4"
        width={7}
      >
        <path
          d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
          role="presentation"
        />
      </svg>
    </div>
  </li>
  <li
    className="xui-breadcrumb"
  >
    <a
      className="xui-breadcrumb--link"
      href="#2"
    >
      Edit
    </a>
  </li>
</ol>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> renders compact XUIBreadcrumbTrail, when at a width context below the specified size and breadcrumb length > 2 1`] = `
<ol
  className="xui-breadcrumbtrail"
>
  <li
    className="xui-breadcrumb"
  >
    <div
      className=""
      data-ref="toggled-wrapper"
      role="presentation"
    >
      <button
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-button xui-breadcrumb--link xui-breadcrumb--dropdowntrigger"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
        type="button"
      >
        ...
      </button>
    </div>
  </li>
  <li
    className="xui-breadcrumb-arrow"
  >
    <div
      className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
    >
      <svg
        className="xui-icon xui-icon-rotate-270"
        focusable="false"
        height={4}
        viewBox="0 0 7 4"
        width={7}
      >
        <path
          d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
          role="presentation"
        />
      </svg>
    </div>
  </li>
  <li
    className="xui-breadcrumb"
  >
    <a
      className="xui-breadcrumb--link"
      href="#3"
    >
      Invite
    </a>
  </li>
</ol>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> renders extra pageHeader classes that are passed in 1`] = `
<header
  className="testClass xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-no-tabs xui-pageheading--content-layout testClassTwo"
  >
    <div
      className="xui-pageheading--leftcontent"
    >
      <div
        className="xui-pageheading--titlewrapper"
      >
        <h1
          className="xui-pageheading--title"
        >
          Testing 💩
        </h1>
      </div>
    </div>
  </div>
</header>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> renders pageHeader and breadcrumbtrail with automation id when qaHook prop is passed in 1`] = `
<header
  className="xui-pageheading"
  data-automationid="qaHook"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-no-tabs xui-pageheading--content-layout"
  >
    <div
      className="xui-pageheading--leftcontent"
    >
      <ol
        className="xui-pageheading--breadcrumbtrail xui-breadcrumbtrail"
        data-automationid="qaHook"
      >
        <li
          className="xui-breadcrumb"
        >
          <span
            className="testy-mctesterson xui-breadcrumb--link"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
            tabIndex="0"
          >
            hello
          </span>
        </li>
        <li
          className="xui-breadcrumb-arrow"
        >
          <div
            className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
          >
            <svg
              className="xui-icon xui-icon-rotate-270"
              focusable="false"
              height={4}
              viewBox="0 0 7 4"
              width={7}
            >
              <path
                d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
                role="presentation"
              />
            </svg>
          </div>
        </li>
        <li
          className="xui-breadcrumb"
        >
          <a
            className="xui-breadcrumb--link"
            href="#2"
          >
            hiya
          </a>
        </li>
        <li
          className="xui-breadcrumb-arrow"
        >
          <div
            className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
          >
            <svg
              className="xui-icon xui-icon-rotate-270"
              focusable="false"
              height={4}
              viewBox="0 0 7 4"
              width={7}
            >
              <path
                d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
                role="presentation"
              />
            </svg>
          </div>
        </li>
        <li
          className="xui-breadcrumb xui-breadcrumb-no-link"
        >
          yo
        </li>
      </ol>
      <div
        className="xui-pageheading--titlewrapper"
      >
        <h1
          className="xui-pageheading--title"
          data-automationid="qaHook--title"
        >
          Test
        </h1>
      </div>
    </div>
  </div>
</header>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> renders pageHeader containing XUIBreadcrumbTrail from nodes 1`] = `
<header
  className="xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-no-tabs xui-pageheading--content-layout"
  >
    <div
      className="xui-pageheading--leftcontent"
    >
      <ol
        className="xui-pageheading--breadcrumbtrail xui-breadcrumbtrail"
      >
        <li
          className="xui-breadcrumb"
        >
          <span
            className="xui-breadcrumb--link"
            onClick={[Function]}
            role="link"
          >
            hello
          </span>
        </li>
        <li
          className="xui-breadcrumb-arrow"
        >
          <div
            className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
          >
            <svg
              className="xui-icon xui-icon-rotate-270"
              focusable="false"
              height={4}
              viewBox="0 0 7 4"
              width={7}
            >
              <path
                d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
                role="presentation"
              />
            </svg>
          </div>
        </li>
        <li
          className="xui-breadcrumb"
        >
          <span
            className="xui-breadcrumb--link"
            onClick={[Function]}
            role="link"
          >
            hello
          </span>
        </li>
        <li
          className="xui-breadcrumb-arrow"
        >
          <div
            className="xui-breadcrumb--icon xui-iconwrapper xui-iconwrapper-medium"
          >
            <svg
              className="xui-icon xui-icon-rotate-270"
              focusable="false"
              height={4}
              viewBox="0 0 7 4"
              width={7}
            >
              <path
                d="M3.5 2.588L.75 0 0 .706 3.5 4 7 .706 6.25 0z"
                role="presentation"
              />
            </svg>
          </div>
        </li>
        <li
          className="xui-breadcrumb"
        >
          <span
            className="xui-breadcrumb--link"
          >
            yo
          </span>
        </li>
      </ol>
      <div
        className="xui-pageheading--titlewrapper"
      >
        <h1
          className="xui-pageheading--title"
        >
          Test
        </h1>
      </div>
    </div>
  </div>
</header>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> renders pageHeader with main title, secondary title, and supplementary text 1`] = `
<header
  className="xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-no-tabs xui-pageheading--content-layout"
  >
    <div
      className="xui-pageheading--leftcontent"
    >
      <div
        className="xui-pageheading--titlewrapper"
      >
        <h1
          className="xui-pageheading--title"
        >
          Testing 💩
        </h1>
        <div
          className="xui-pageheading--secondarytitle"
        >
          Testing 💩
        </div>
        <div
          className="xui-pageheading--supplementarytext"
        >
          And more testing 💩
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`<XUI PageHeader and BreadcrumbTrail/> renders the simplest pageHeader with no extra settings passed 1`] = `
<header
  className="xui-pageheading"
>
  <div
    className="xui-pageheading--content xui-pageheading--content-no-tabs xui-pageheading--content-layout"
  >
    <div
      className="xui-pageheading--leftcontent"
    >
      <div
        className="xui-pageheading--titlewrapper"
      >
        <h1
          className="xui-pageheading--title"
        >
          Testing 💩
        </h1>
      </div>
    </div>
  </div>
</header>
`;
